# fuse-box

./: README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: Fields.md
docs/en/: Fields.md  README.md
docs/ru/: Fields.md  README.md
fuse_core/handlers/: containers.py  fields.py  handlers.py  utils.py
fuse_core/orm/: validators.py
src/fuse_core/: __init__.py
src/fuse_core/core/: containers.py  etc.py  exceptions.py  fields.py  handlers.py  validators.py
src/fuse_core/orm/: serializers.py  validators.py
src/fusebox/: __init__.py
src/fusebox/core/: containers.py  etc.py  exceptions.py  fields.py  handlers.py  utils.py  validators.py
src/fusebox/orm/: etc.py  exceptions.py  fields.py  serializers.py
src/handlers/: exceptions.py
src/orm/: serializers.py
tests/: fields_test.py  test_container.py  test_dict.py  test_fields.py  test_serializers.py  test_validators.py
